# downloader

./: .gitignore  README.md  api.txt  dk.lib  xl_dl_sdk.h
.github/workflows/: ci.yml  release.yml
cpp_xl_dl_demo/: CMakeLists.txt  DOWNLOAD_FIX_SUMMARY.md  GUI_LAYOUT.txt  IMPLEMENTATION_SUMMARY.md  MAGNET_SUPPORT_LAYOUT.md  README_GUI.md  download_helper.cpp  download_helper.h  fs_utility.h  http.h  main.cpp  main_gui.cpp  readme.txt  torrent_demo.cpp  torrent_helper.cpp  torrent_helper.h
